# DBWaller

./: .gitignore  .guide.txt  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  EMPIRICAL_PROOF.md  LICENSE  README.md  SECURITY.md  conanfile.py  cross_trial_analysis.py  gen_variance_table.py  policy.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  nightly.yml  release.yml
apps/: CMakeLists.txt
apps/embedded_demo/: CMakeLists.txt  main.cpp
apps/support/: CMakeLists.txt  fake_adapter.hpp
benchmarks/: CMakeLists.txt  baseline_bench.cpp  cache_bench.cpp  throughput_bench.cpp
cmake/: DBWallerConfig.cmake.in
docs/: benchmark-methodology.md  ci-release-roadmap.md  testing-plan.md
include/dbwaller/adapters/: adapter.hpp  request_context.hpp
include/dbwaller/concurrency/: thread_pool.hpp
include/dbwaller/core/: engine.hpp  gateway.hpp  sharded_engine.hpp
include/dbwaller/observability/: observer.hpp  types.hpp
include/dbwaller/policy/: cache_key.hpp  config_loader.hpp  dump.hpp  policy.hpp  presets.hpp  rules.hpp
include/dbwaller/security/: claims.hpp  crypto.hpp
results/: CROSS_TRIAL_VARIANCE_TABLE.txt
results/processed/: run_20260318T055850Z_Ojongs-MacBook-Pro_a061c0e.csv  run_20260318T070500Z_Ojongs-MacBook-Pro_a061c0e_trial2.csv  run_20260318T071500Z_Ojongs-MacBook-Pro_a061c0e_trial3.csv  run_20260318T072500Z_Ojongs-MacBook-Pro_a061c0e_trial4.csv
results/raw/run_20260318T055850Z_Ojongs-MacBook-Pro_a061c0e/: baseline.json  metadata.txt  sharded.json
results/raw/run_20260318T070500Z_Ojongs-MacBook-Pro_a061c0e_trial2/: baseline.json  metadata.txt  sharded.json
results/raw/run_20260318T071500Z_Ojongs-MacBook-Pro_a061c0e_trial3/: baseline.json  metadata.txt  sharded.json
results/raw/run_20260318T072500Z_Ojongs-MacBook-Pro_a061c0e_trial4/: baseline.json  metadata.txt  sharded.json
scripts/: analyze_results.py  plot_results.py  run_benchmarks.sh
src/concurrency/: thread_pool.cpp
src/core/: sharded_engine.cpp
src/observability/: observer.cpp
src/policy/: config_loader.cpp
src/security/: claims.cpp  crypto.cpp
test_package/: CMakeLists.txt  conanfile.py
tests/: CMakeLists.txt
tests/functional/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_claims_isolation.cpp  test_eviction.cpp  test_invalidation.cpp  test_runner.cpp  test_swr_bench.cpp  test_thundering_herd.cpp
tests/regression/: CMakeLists.txt
tests/system/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/adapters/: request_context_tests.cpp
tests/unit/policy/: cache_key_tests.cpp  rules_tests.cpp
tests/unit/security/: claims_tests.cpp
